ingress/multiple-path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multipath-example
  labels:
    name: myingress
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/service1"
        backend:
          service:
            name: service-1
            port: 
              number: 9376
      - pathType: Prefix
        path: "/service2"
        backend:
          service:
            name: service-2
            port: 
              number: 9524
